Fixed so unit test passes

--- a/src/jacques_flu/jacques_flu_demo.ipynb
+++ b/src/jacques_flu/jacques_flu_demo.ipynb
@@ -85,6 +85,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -123,6 +128,15 @@
    ],
    "source": [
     "state_dat.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Featurizing the Data\n",
+    "\n",
+    "We make use of the `timeseriesutils` module to featurize the data"
    ]
   }
  ],
